// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieNavReviews Render MovieNavReviews with comments 1`] = `
<div
  className="movie-card__reviews movie-card__row"
>
  <div
    className="movie-card__reviews-col"
  />
  <div
    className="movie-card__reviews-col"
  />
</div>
`;

exports[`MovieNavReviews Render MovieNavReviews with comments loading 1`] = `
<div
  className="movie-card__reviews movie-card__row"
>
  reviews is loading...
</div>
`;

exports[`MovieNavReviews Render MovieNavReviews with comments loading error 1`] = `
<div
  className="movie-card__reviews movie-card__row"
>
  server error, try later...
</div>
`;
